fix color in text and wrap off in forms

--- a/src/style.css
+++ b/src/style.css
@@ -78,6 +78,7 @@ header {
   font-weight: bolder;
   line-height: 70px;
   font-weight: 900;
+  color: hotpink;
 }
 
 .aboutme__name {
@@ -85,6 +86,9 @@ header {
   font-size: 50px;
   font-weight: 900;
   line-height: 70px;
+  background-image: linear-gradient(to right, violet, rgb(54, 214, 246), violet);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .aboutme__what {
@@ -147,6 +151,9 @@ header {
   text-align: center;
   color: rgb(0, 0, 0);
   line-height: 150px;
+  background-image: linear-gradient(to left, violet, rgb(54, 214, 246), violet);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .knowledge__what,
@@ -253,7 +260,7 @@ header {
   width: 50%;
   transition: 0.5s;
   object-fit: cover;
-  filter: invert(100%) sepia(100%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+  filter: invert(1000%) sepia(1000%) saturate(30000%) hue-rotate(250deg) brightness(99%) contrast(100%);
 }
 
 .project__img:hover {
@@ -558,6 +565,7 @@ footer {
   .contact__right {
     width: 100%;
     padding-left: 0px;
+
   }
 
   .project__maingrid {
@@ -597,5 +605,10 @@ footer {
 
   .footer__list {
     display: none;
+  }
+
+  .form__container {
+    display: flex;
+    flex-wrap: nowrap;
   }
 }
